# memtrace_viewer

./: CHANGES.md  Readme.md  memtrace_viewer.opam
bonsai_simple_table/src/: bonsai_simple_table.ml  bonsai_simple_table.mli  bonsai_simple_table_intf.ml  dune
client/: and_view.ml  and_view.mli  app.ml  app.mli  backtrace_view.ml  backtrace_view.mli  changing.ml  changing.mli  checkbox.ml  checkbox.mli  details_panel.ml  details_panel.mli  dune  explore_panel.ml  explore_panel.mli  filter_editor.ml  filter_editor.mli  filter_panel.ml  filter_panel.mli  filter_spec.ml  filter_spec.mli  flame_graph_panel.ml  flame_graph_panel.mli  flame_graph_view.ml  flame_graph_view.mli  flame_graph_view_intf.ml  graph_view.ml  graph_view.mli  help_panel.ml  help_panel.mli  info_panel.ml  info_panel.mli  keyboard_scope.ml  keyboard_scope.mli  list_editor.ml  list_editor.mli  location.ml  location.mli  location_table.ml  location_table.mli  (+35 more)
client/src/: after_next_display.ml  after_next_display.mli  and_view.ml  and_view.mli  app.ml  app.mli  app_state.ml  app_state.mli  dune  filter_editor.ml  filter_editor.mli  filter_panel.ml  filter_panel.mli  filter_spec.ml  filter_spec.mli  flame_graph_panel.ml  flame_graph_panel.mli  flame_graph_view.ml  flame_graph_view_intf.ml  graph_view.ml  graph_view.mli  info_panel.ml  info_panel.mli  keyboard_scope.ml  keyboard_scope.mli  list_editor.ml  list_editor.mli  location.ml  location.mli  location_table.ml  location_table.mli  main_panel.ml  main_panel.mli  memtrace_viewer_client.ml  memtrace_viewer_client.mli  nice.ml  nice.mli  panel.ml  panel.mli  poi_panel.ml  (+22 more)
common/: action.ml  action.mli  data.ml  data.mli  data_intf.ml  dune  filter.ml  filter.mli  fragment_trie.ml  fragment_trie.mli  fragment_trie_intf.ml  identifier.ml  identifier.mli  identifier_intf.ml  memtrace_viewer_common.ml  orientation.ml  orientation.mli  protocol.ml  protocol.mli  range.ml  range.mli  range_intf.ml  time_range.ml  time_range.mli
server/src/: call_site.ml  call_site.mli  dune  event.ml  event.mli  filtered_trace.ml  filtered_trace.mli  graph.ml  graph.mli  hierarchical_heavy_hitters.ml  hierarchical_heavy_hitters.mli  hot_call_sites.ml  hot_call_sites.mli  hot_paths.ml  hot_paths.mli  location.ml  location.mli  location_trie.ml  location_trie.mli  memtrace_viewer_native.ml  memtrace_viewer_native.mli  obj_id.ml  obj_id.mli  peak.ml  peak.mli  raw_trace.ml  raw_trace.mli  rpc_implementations.ml  rpc_implementations.mli  substring_heavy_hitters.ml  substring_heavy_hitters.mli  user_state.ml  user_state.mli
test/client/: dune  graph_view.ml  memtrace_viewer_client_tests.ml
test/common/: dune  fragment_trie.ml  fragment_trie.mli  range.ml
test/server/: dune  filtered_trace.ml  substring_heavy_hitters.ml  test_trace.ctf
test/server/tools/: dune  generate_test_data-help-for-review.org  generate_test_data.ml
