opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/memtrace_viewer"
bug-reports: "https://github.com/janestreet/memtrace_viewer/issues"
dev-repo: "git+https://github.com/janestreet/memtrace_viewer.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/memtrace_viewer/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "async"
  "async_js"
  "async_kernel"
  "async_rpc_kernel"
  "async_rpc_websocket"
  "async_unix"
  "bonsai"
  "bonsai_web"
  "bonsai_web_components"
  "codicons"
  "core"
  "core_kernel"
  "core_unix"
  "incr_dom"
  "incr_map"
  "memtrace"
  "ocaml-embed-file"
  "ppx_css"
  "ppx_jane"
  "ppx_pattern_bind"
  "textutils"
  "virtual_dom"
  "cohttp"                {>= "2.5.6"}
  "cohttp-async"          {>= "2.5.7" & < "3.0.0" | >= "5.1.1" & < "6.0.0"}
  "dune"                  {>= "3.17.0"}
  "js_of_ocaml"           {= "6.0.1+ox"}
  "js_of_ocaml-ppx"       {= "6.0.1+ox"}
  "uri"                   {>= "3.0.0"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Interactive memory profiler based on Memtrace"
description: "
Processes traces produced by the Memtrace library and displays the
top allocators in a table or flame graph. To help find space leaks,
events can be filtered by lifetime, showing only allocations of
objects that are still live at peak memory usage.
"
