(library
 (name memtrace_viewer_client)
 (public_name memtrace_viewer.client)
 (modes byte)
 (flags :standard -w -31)
 (libraries async_kernel async_js core bonsai.web memtrace_viewer_common
   bonsai_simple_table bonsai.web_ui_element_size_hooks virtual_dom.keyboard
   codicons virtual_dom.input_widgets virtual_dom.svg)
 (preprocess
  (pps js_of_ocaml-ppx bonsai.ppx_bonsai ppx_jane ppx_css)))
