(library (name memtrace_viewer_native) (public_name memtrace_viewer.native)
 (libraries memtrace_viewer_common memtrace core_kernel.pairing_heap
  async_rpc_websocket)
 (preprocess (pps ppx_jane)))

(rule (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../../client/main.bc.js
  ../../client/style.css)
 (action (bash "%{deps} -output embedded_files")))