(library
 (name memtrace_viewer_native)
 (public_name memtrace_viewer.native)
 (libraries async async_unix cohttp cohttp-async core memtrace
   memtrace_viewer_common core_kernel.pairing_heap async_rpc_websocket
   core_unix.time_float_unix uri)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} ../../client/bin/main.bc.js
   ../../client/src/style.css)
 (action
  (bash "%{deps} -output embedded_files")))
